# OperatingSystems2

./: CMakeLists.txt  Makefile  extract-words.c  extract-words.h  graph.c  graph.h  hashutils.c  hashutils.h  linked-list.c  linked-list.h  main.c  main.h  menu.c  menu.h  red-black-tree.c  red-black-tree.h  strutils.c  strutils.h  treeio.c  treeio.h
hash/: hash.c
indexacio-local/: Makefile
lectura-fitxers/: exemple-fgets.c  exemple-fscanf.c  fitxer.txt
practica1/: README.md
practica1/src/arbre-binari/: Makefile
practica1/src/llegir-diccionari/: fitxer-fscanf.c
practica2/src/: Makefile  extract-words.c  extract-words.h  linked-list.c  linked-list.h  main.c  main.h  red-black-tree.c  red-black-tree.h
practica2/src/arbre-binari/: Makefile  main.c  red-black-tree.h
practica2/src/extraccio-paraules/: exemple.c  extract-words.c
practica2/src/indexacio-local/: Makefile  linked-list.c  linked-list.h  main.c
practica2/src/lectura-fitxers/: exemple-fgetc.c  exemple-fread.c
src/arbre-binari/: README  main.c  red-black-tree.c  red-black-tree.h
src/llegir-diccionari/: fitxer-fscanf.c
